Can now deserialize derived types to abstract base type or abstract typed properties. Added IsDeserializable to TypeDefinition. Changed ObjectParser.Options.SerializeOneWayTypes to SerializeAllTypes, which is how it was being used. If not set, only types that can be serialized AND deserialized will be serialized.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-Add tests for all exception cases.
-
+Investigate deserializing value types and anonymous types.
 Take attributes like Unserialized and XmlIgnore into account.
 Make PartiallyTypedJsonStringBuilder that only adds type information when necessary.
  - Should automatically add type info when source is interface or abstract
