Can mark properties with attribute to force type identifiers to be serialized. Can serialize non-JSON dictionaries.
--HG--
rename : Objects/TypeHelper.cs => Objects/ReflectionHelper.cs
rename : Objects/TypeDefinitions/DictionaryDefinition.cs => Objects/TypeDefinitions/JsonDictionaryDefinition.cs

--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ Make PartiallyTypedJsonStringBuilder that only adds type information when necess
  - Should automatically add type info when source is interface or abstract
  - Add attribute that forces type information.
 Allow override of type resolution.
+Test duplicate value types - will probably incorrectly create references at the moment.
