--- a/TODO
+++ b/TODO
@@ -1,19 +1,16 @@
-I want JsonString output objects to take in a JsonStringWriter for outputting text. Two implementations: one with pretty formatting and one without.
-JsonStringWriter should write to a TextWriter to allow streaming scenarios.
-Current issue is that structures are never 'closed', so the full string can't be built until GetResult is called.
-Investigate not returning Outputs to Reader and having Writer maintain a stack instead.
+Clean up ObjectWriter - all those checks for PreBuildWriter are crap.
 
 
-Make PartiallyTypedJsonStringBuilder that only adds type information when necessary.
- - Should automatically add type info when source is interface or abstract
- - Add attribute that forces type information.
 Allow override of type resolution.
 Test duplicate value types - will probably incorrectly create references at the moment.
 Test nullable value type properties.
 Turn all singleton properties into public readonly fields.
-Don't require output to be an object. Get rid of AsStructure if possible.
 Simple struct serialization with ToString & Parse.
 Support IDictionary - detect map or KeyValuePair list.
+Better object construction
+ - Avoid passing in properties that can be set directly.
+ - Once property has been passed in, don't set it again.
+Add tests for static func method generation.
 
 New Serialization Rules:
  - Defaults
