Added separate write functions for each primitive type. JsonStringWriter is the only writer that implements property so far.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-Clean up ObjectWriter - all those checks for PreBuildWriter are crap.
+Specific write functions for different number types.
+Optimise string escaping.
 
 
 Allow override of type resolution.
