--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 Implement/optimise string escaping.
 
-Allow override of type resolution.
+Add TypeCache.RegisterTypeDefinitionFactory.
 Test duplicate value types - will probably incorrectly create references at the moment.
 Turn all singleton properties into public readonly fields.
 Simple struct serialization with ToString & Parse.
